# wsdc-sync-rs

./: Cargo.toml  README.md
src/: main.rs  wsdc_tasks.rs
src/wsdc_tasks/: mod.rs
