[package]
name = "wsdc-db-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.154", features = ["derive"] }
reqwest =  { version = "0.11.14", features = ["blocking"] }
regex = "1.7.1"
tokio = { version = "1.26.0", features = ["full", "sync"] }
futures = "0.3.27"